--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -11,9 +11,9 @@
 		{% endif %}
 		<form action="" method="POST" class="form-signin">
 			<div class="form-group">
-				<input type="username" class="form-control" name="username" placeholder="Username" required><br>
+				<input type="username" pattern="[a-zA-Z0-9_]+" class="form-control" name="username" placeholder="Username" pattern=".{4,14}" required title='Minimum 4 characters, Maximum 14, Only use letters, numbers or the symbol "-"'><br>
 				<input type="email" class="form-control" name="email" placeholder="Email" required><br>
-				<input type="password" class="form-control" name="password" placeholder="Password" required><br>
+				<input type="password" class="form-control" name="password" placeholder="Password" pattern=".{4,}" required title="Password must be at least 4 characters"><br>
 				<input style="width: 100%" type="submit" class="btn btn-primary" value="Register" style="text-align: center;">
 			</div>
 		</form>
