--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,13 @@
 <html>
 	<head>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-		<meta charset="utf-8">
-		<meta name="viewport"content="width=device-width, initial-scale=1">
 		<link href="/static/css/style.css" rel="stylesheet">
-		<link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/navbar-fixed/">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+		<meta name="description" content="The amazing social network that will not sell your data! Sign up and make a post today!">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="keywords" content="ShibaNet, Social, network, social network, shibanet">
 	</head>
 	<body>
 {% if not hidenav %}
@@ -17,6 +20,9 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item">
+							<a class="nav-link" href="/all">All</a>
+						</li>
 						{% if "username" in session %}
 						<li class="nav-item">
 							<a class="nav-link" href="/submit">Post</a>
@@ -24,11 +30,14 @@
 						<li class="nav-item">
 							<a class="nav-link" href={{ url_for("view_user", username=session["username"]) }}>{{ session["username"] }}</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href={{ url_for("user_settings") }}>Settings</a>
+						</li>
 						{% endif %}
 					</ul>
 					<span class="navbar-text">
 						{% if "username" in session %}
-        				<a class="nav-link" href="/logout">Logout</a>
+						<a class="nav-link" href="/logout" onclick="return confirm('Are you sure?')">Logout</a>
 						{% else %}
 						<a class="nav-link" href="/login">Login</a>
 						{% endif %}
