--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,14 @@
 <h6>Sorting by New</h6>
 {% for post in posts %}
 <hr>
-<h4><a href={{ url_for("view_post", post_id=post["_id"]) }}>{{ post["title"] }}</a></h4>
-{{ post["body"] }}
-{% endfor %}
+<h4><a href={{ url_for("view_post", post_id=post["_id"]) }}>{{ post["title"]|markdown }}</a></h4>
 
+{% if session["username"] == post["author"] %}
+<button class="btn"><a href="{{ url_for('delete_post',post_id=post['_id']) }}"><i class="fa fa-trash"></i></a></button>
+<button class="btn"><a href="{{ url_for('edit_post',post_id=post['_id']) }}"><i class="fa fa-edit"></i></a></button>
+{% endif %}
+
+{{ post["body"]|markdown }}
+
+{% endfor %}
 {% endblock %}
