--- a/templates/post/submit.html
+++ b/templates/post/submit.html
@@ -5,12 +5,21 @@
 {% if error %}
 <div class="alert alert-danger" role="alert">{{ error }}</div>
 {% endif %}
-<form action="{{ url_for('submit') }}" method="POST" class="form-signin">
+
+<form action={% if not edit_post %}"{{ url_for('submit') }}"{% else %}"{{ url_for('edit_post',post_id=edit_post['_id']) }}"{% endif %} method="POST" class="form-signin">
+	{% if edit_post %}
+	<div class="form-group">
+		<input style="width:50%" type="title" class="form-control" name="title" placeholder="Title*" value="{{ edit_post['title'] }}"><br>
+		<textarea style="width: 75%" class="form-control" id="body" name="body" rows="7" placeholder="Body*" maxlength="1000">{{ edit_post['body'] }}</textarea><br>
+		<input type="submit" class="btn btn-primary" value="Edit" style="text-align: center;" onClick="OnSubmit(this);">
+	</div>
+	{% else %}
 	<div class="form-group">
 		<input style="width:50%" type="title" class="form-control" name="title" placeholder="Title*"><br>
 		<textarea style="width: 75%" class="form-control" id="body" name="body" rows="7" placeholder="Body*" maxlength="1000"></textarea><br>
 		<input type="submit" class="btn btn-primary" value="Post!" style="text-align: center;" onClick="OnSubmit(this);">
 	</div>
+	{% endif %}
 </form>
 <script>
 	function OnSubmit(el) {
