--- a/templates/post/view.html
+++ b/templates/post/view.html
@@ -1,9 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 <title>{{ post["title"] }} - ShibaNet</title>
-<h2>{{ post["title"] }}</h2>
+<meta name="author" content="{{ post['author'] }}">
+
+<h2>{{ post["title"]|markdown }}</h2>
 <h3>Posted by <a href={{ url_for("view_user", username=post["author"]) }}>{{ post["author"] }}</a></h3>
-{{ post["body"] }}
+{{ post["body"]|markdown }}
+
+{% if session["username"] == post["author"] %}
+<button class="btn"><a href="{{ url_for('delete_post',post_id=post['_id']) }}"><i class="fa fa-trash"></i></a></button>
+<button class="btn"><a href="{{ url_for('edit_post',post_id=post['_id']) }}"><i class="fa fa-edit"></i></a></button>
+{% endif %}
 
 <br><br><p>Posted on {{ timestamp }}</p>
 {% endblock %}
