--- a/templates/user/view.html
+++ b/templates/user/view.html
@@ -1,11 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>{{ username }}</h2>
+<title>{{ user["name"] }} - ShibaNet</title>
+<h2>{{ user["name"] }}</h2>
+{{ user["bio"]|markdown }}
+<div class="followButton">
+	{% if user["name"] != session["username"] %}
+	<a href="{{ user['name'] }}/follow"> Follow{% if following %}ing{% endif %} </a>
+	{% else %}
+	<a href="{{ url_for('user_settings') }}">Settings</a>
+	{% endif %}
+</div>
 
 {% for post in user_posts %}
 <hr>
-<h4><a href={{ url_for("view_post", post_id=post["_id"]) }}>{{ post["title"] }}</a></h4>
-{{ post["body"] }}
+<h4><a href={{ url_for("view_post", post_id=post["_id"]) }}>{{ post["title"]|markdown }}</a></h4>
+
+{% if session["username"] == post["author"] %}
+<button class="btn"><a href="{{ url_for('delete_post',post_id=post['_id']) }}"><i class="fa fa-trash"></i></a></button>
+<button class="btn"><a href="{{ url_for('edit_post',post_id=post['_id']) }}"><i class="fa fa-edit"></i></a></button>
+{% endif %}
+
+{{ post["body"]|markdown }}
+
 {% endfor %}
 
 {% endblock %}
