--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -16,7 +16,7 @@
 				<input type="password" class="form-control" name="password" placeholder="Password" pattern=".{4,}" required title="Password must be at least 4 characters"><br>
 				<input style="width: 100%" type="submit" class="btn btn-primary" value="Register" style="text-align: center;">
 			</div>
-		</form>
+		</form><br>
 		<a style="width: 100%" class="btn btn-secondary" role="button" href="{{url_for('login')}}" style="text-align: center;">Already have an account?</a>
 	</div>
 </div>
