--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -15,7 +15,7 @@
 				<input type="password" class="form-control" name="password" placeholder="Password" required><br>
 				<input style="width: 100%" type="submit" class="btn btn-primary" value="Log in" style="text-align: center;">
 			</div>
-		</form>
+		</form><br>
 		<a style="width: 100%" class="btn btn-secondary" role="button" href="{{url_for('register')}}" style="text-align: center;">Dont have an account?</a>
 	</div>
 </div>
