--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 	<head>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
@@ -9,7 +10,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="keywords" content="ShibaNet, Social, network, social network, shibanet">
 	</head>
-	<body>
+{% if "theme" in session %}
+	<body class="{{ session['theme'] }}_theme">
+{% else %}
+	<body class="amethyst_theme">
+{% endif %}
+
 {% if not hidenav %}
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -21,37 +27,84 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
+							<a class="nav-link" href="/">Home</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="/all">All</a>
 						</li>
 						{% if "username" in session %}
 						<li class="nav-item">
-							<a class="nav-link" href="/submit">Post</a>
+							<a class="nav-link" href={{ url_for("submit") }}>Post</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href={{ url_for("view_user", username=session["username"]) }}>{{ session["username"] }}</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href={{ url_for("user_settings") }}>Settings</a>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ session["username"] }}</a>
+							<ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
+								<li><a class="nav-link" href={{ url_for("submit") }}>Post</a></li>
+								<li><a class="nav-link" href={{ url_for("me") }}>Profile</a></li>
+								<li><a class="nav-link" href={{ url_for("user_settings") }}>Settings</a></li>
+							</ul>
 						</li>
 						{% endif %}
 					</ul>
-					<span class="navbar-text">
+					<ul class="navbar-nav ml-auto">
+						{% if "username" in session %}
+						<li class="nav-item">
+							<span class="badge badge-pill badge-primary" style="float:right;margin-bottom:-10px;">{{ notifs|count if notifs|count > 0 else ""}}</span>
+							<a class="nav-link" data-bs-toggle="offcanvas" href="#notifications" role="button" aria-controls="notifications">Notifications</a>
+						</li>
+						{% endif %}
+						
+						<li class="nav-item">
 						{% if "username" in session %}
 						<a class="nav-link" href="/logout" onclick="return confirm('Are you sure?')">Logout</a>
 						{% else %}
-						<a class="nav-link" href="/login">Login</a>
+						<a class="nav-link" href={{ url_for("login") }}>Login</a>
 						{% endif %}
+						</li>
       				</span>
+					</ul>
 				</div>
 			  </div>
 			</nav>
 		</header>
 {% endif %}
-		<div style="padding-left: 15px;padding-top: 15px;">
+		<div class="main">
 			{% block content %}
 			{% endblock %}
+		</div>
+
+		<div style="color:white;" class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="notifications" aria-labelledby="notificationsLabel">
+			<div class="offcanvas-header">
+				<h5 id="notificationsLabel">Notifications</h5>
+				<a href="#" id="markread"><button class='btn btn-primary' onclick="this.value='Success!';">Mark All Read</button></a>
+    			<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+			</div>
+			<div class="offcanvas-body">
+				{% for notif in notifs %}
+
+				<div class="main">
+						<h6><a class="no-highlight" href="{{ url_for('view_notif') }}?notif={{ notif['_id'] }}">{{ notif["title"]|markdown }}</a></h6>
+						<div class="main">{{ notif["body"]|e|truncate(50)|markdown }}</div>
+				<p class="timestamp">{{ notif["timestamp"] }}</p>
+				</div>
+				<hr>
+				{% endfor %}
+				You have no more new notifications
+			</div>
 		</div>
 	</body>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
 	<script data-ad-client="ca-pub-9866851955040612" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </html>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type=text/javascript>
+    $(function() {
+    	$('a#markread').bind('click', function() {
+            $.getJSON('/mark_all_read',
+                function(data) {}
+			);
+			return false;
+    	});
+    });
+</script>
