--- a/templates/home.html
+++ b/templates/home.html
@@ -4,14 +4,22 @@
 <h6>Sorting by New</h6>
 {% for post in posts %}
 <hr>
-<h4><a href={{ url_for("view_post", post_id=post["_id"]) }}>{{ post["title"]|markdown }}</a></h4>
+<h4><a href={{ url_for("view_post", post_id=post["_id"]) }}>{{ post["title"]|e|markdown }}</a></h4>
+<h6>Posted by <a href={{ url_for("view_user", username=post["author"]) }}>
+		{{ post["author"] }}
+	</a>
+</h6>
 
 {% if session["username"] == post["author"] %}
 <button class="btn"><a href="{{ url_for('delete_post',post_id=post['_id']) }}"><i class="fa fa-trash"></i></a></button>
-<button class="btn"><a href="{{ url_for('edit_post',post_id=post['_id']) }}"><i class="fa fa-edit"></i></a></button>
+	{% if post["type"] == "text" %}
+	<button class="btn"><a href="{{ url_for('edit_post',post_id=post['_id']) }}"><i class="fa fa-edit"></i></a></button>
+	{% endif %}
 {% endif %}
 
-{{ post["body"]|markdown }}
+<div class="{{ post['type'] }}_post">
+{{ post["body"] | e | truncate(200) | markdown }}
+</div>
 
 {% endfor %}
 {% endblock %}
