--- a/templates/post/view.html
+++ b/templates/post/view.html
@@ -3,14 +3,31 @@
 <title>{{ post["title"] }} - ShibaNet</title>
 <meta name="author" content="{{ post['author'] }}">
 
-<h2>{{ post["title"]|markdown }}</h2>
-<h3>Posted by <a href={{ url_for("view_user", username=post["author"]) }}>{{ post["author"] }}</a></h3>
-{{ post["body"]|markdown }}
+<h2>{{ post["title"]|e|markdown }}</h2>
+<p style="font-size: 30px;">
+	Posted by <a href={{ url_for("view_user", username=post["author"]) }}>
+		<img src="{{ authorpfp }}" onerror="this.onerror=null; this.src='https://i.imgur.com/WxNkK7J.png'" alt="User's pfp" class="rounded" width="30px" height="30px">{{ post["author"] }}
+	</a>
+</p>
+
+<div class="{{ post['type'] }}_post">
+	{{ post["body"]|e|markdown }}
+</div>
 
 {% if session["username"] == post["author"] %}
 <button class="btn"><a href="{{ url_for('delete_post',post_id=post['_id']) }}"><i class="fa fa-trash"></i></a></button>
-<button class="btn"><a href="{{ url_for('edit_post',post_id=post['_id']) }}"><i class="fa fa-edit"></i></a></button>
+	{% if post["type"] == "text" %}
+	<button class="btn"><a href="{{ url_for('edit_post',post_id=post['_id']) }}"><i class="fa fa-edit"></i></a></button>
+	{% endif %}
 {% endif %}
 
-<br><br><p>Posted on {{ timestamp }}</p>
+<br><br><p class="timestamp">Posted on {{ timestamp }}</p>
+
+{%- for subcomment in comment recursive %}
+    <li><a href="{{ item.href|e }}">{{ item.title }}</a>
+    {%- if item.children -%}
+        <ul class="submenu">{{ loop(item.children) }}</ul>
+    {%- endif %}</li>
+{%- endfor %}
+
 {% endblock %}
