--- a/templates/user/view.html
+++ b/templates/user/view.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <title>{{ user["name"] }} - ShibaNet</title>
+<img src="{{ user['pfp'] }}" onerror="this.onerror=null; this.src='https://i.imgur.com/WxNkK7J.png'" alt="" class="rounded" width="100px" height="100px">
 <h2>{{ user["name"] }}</h2>
-{{ user["bio"]|markdown }}
+{{ user["bio"]|e|markdown }}
 <div class="followButton">
 	{% if user["name"] != session["username"] %}
 	<a href="{{ user['name'] }}/follow"> Follow{% if following %}ing{% endif %} </a>
@@ -11,17 +12,44 @@
 	{% endif %}
 </div>
 
-{% for post in user_posts %}
-<hr>
-<h4><a href={{ url_for("view_post", post_id=post["_id"]) }}>{{ post["title"]|markdown }}</a></h4>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+	<li class="nav-item" role="presentation">
+		<button class="nav-link active" id="posts-tab" data-bs-toggle="tab" data-bs-target="#posts" type="button" role="tab" aria-controls="posts" aria-selected="true">Posts</button>
+	</li>
+  	<li class="nav-item" role="presentation">
+    	<button class="nav-link" id="comments-tab" data-bs-toggle="tab" data-bs-target="#comments" type="button" role="tab" aria-controls="comments" aria-selected="false">Comments</button>
+  	</li>
+  	<li class="nav-item" role="presentation">
+    	<button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Contact</button>
+  	</li>
+</ul>
+<div class="tab-content" id="myTabContent">
+	<div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
+		<br>
+		{% for post in user_posts %}
+		<h4><a href={{ url_for("view_post", post_id=post["_id"]) }}>{{ post["title"]|e|markdown }}</a></h4>
 
-{% if session["username"] == post["author"] %}
-<button class="btn"><a href="{{ url_for('delete_post',post_id=post['_id']) }}"><i class="fa fa-trash"></i></a></button>
-<button class="btn"><a href="{{ url_for('edit_post',post_id=post['_id']) }}"><i class="fa fa-edit"></i></a></button>
-{% endif %}
+		{% if session["username"] == post["author"] %}
+		<button class="btn"><a href="{{ url_for('delete_post',post_id=post['_id']) }}"><i class="fa fa-trash"></i></a></button>
+			{% if post["type"] == "text" %}
+			<button class="btn"><a href="{{ url_for('edit_post',post_id=post['_id']) }}"><i class="fa fa-edit"></i></a></button>
+			{% endif %}
+		{% endif %}
 
-{{ post["body"]|markdown }}
-
-{% endfor %}
+		<div class="{{ post['type'] }}_post">
+			{{ post["body"] | e | truncate(200) | markdown }}
+		</div>
+		<hr>
+		{% endfor %}
+	</div>
+	<div class="tab-pane fade" id="comments" role="tabpanel" aria-labelledby="comments-tab">
+		<br>
+		Comments appear here
+	</div>
+	<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+		<br>
+		Not sure what to put here yet
+	</div>
+</div>
 
 {% endblock %}
