Changed meta description

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 		<link href="/static/css/style.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-		<meta name="description" content="The amazing social network that will not sell your data! Sign up and make a post today!">
+		<meta name="description" content="Sign up and share with people who have similar interests today :D">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="keywords" content="ShibaNet, Social, network, social network, shibanet">
