--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
 <title>Home - ShibaNet</title>
-<h6>Sorting by New</h6>
+
+<h6>Sort by: 
+	<a href="/?sort=Following">Following</a> 
+	<a href="/?sort=All">All</a> 
+</h6>
+
+
 {% for post in posts %}
 <hr>
 <h4><a href={{ url_for("view_post", post_id=post["_id"]) }}>{{ post["title"]|e|markdown }}</a></h4>
