--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,7 @@ hr {
 }
 .timestamp {
 	font-size: 15px;
-	color: rgb(100, 100, 100);
+	color: #646464;
 	text-align: right;
 }
 .no-highlight {
@@ -48,22 +48,22 @@ hr {
 }
 
 .theme_select {
-	background-color: rgb(100, 100, 100);
+	background-color: #5f5f5f;
 	width: 80%
 }
 .amethyst_theme {
-	background-color: rgb(48, 38, 102);
-	color: white;
+	background-color: #302666;
+	color: #ffffff;
 }
 .dark_theme {
-	background-color: rgb(50, 50, 50);
-	color: white;
+	background-color: #323232;
+	color: #ffffff;
 }
 .light_theme {
-	background-color: white;
-	color: black;
+	background-color: #ffffff;
+	color: #000000;
 }
 .banana_theme {
-	background-color: yellow;
-	color: black;
+	background-color: #ffee00;
+	color: #6b3722;
 }
