--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -11,12 +11,13 @@
 		{% endif %}
 		<form action="{{ url_for('login') }}" method="POST" class="form-signin">
 			<div class="form-group">
-				<input type="username" class="form-control" name="username" placeholder="Username" required><br>
+				<input type="username" class="form-control" name="username" placeholder="Username or e-mail" required><br>
 				<input type="password" class="form-control" name="password" placeholder="Password" required><br>
 				<input style="width: 100%" type="submit" class="btn btn-primary" value="Log in" style="text-align: center;">
 			</div>
 		</form><br>
-		<a style="width: 100%" class="btn btn-secondary" role="button" href="{{url_for('register')}}" style="text-align: center;">Dont have an account?</a>
+		<a style="width: 100%" class="btn btn-secondary" role="button" href="{{url_for('register')}}" style="text-align: center;">Dont have an account?</a><br><br>
+		<a style="width: 100%" class="btn btn-secondary" role="button" href="{{url_for('forgot_password')}}" style="text-align: center;">Forgot password?</a>
 	</div>
 </div>
 {% endblock %}
