--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,9 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 		<link href="/static/css/style.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="shortcut icon" type="image/jpg" href="/static/icons/favicon.ico"/>
 
+		<link rel="manifest" href="/static/manifest.json">
 		<meta name="description" content="Sign up and share with people who have similar interests today :D">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,9 +31,6 @@
 						<li class="nav-item">
 							<a class="nav-link" href="/">Home</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="/all">All</a>
-						</li>
 						{% if "username" in session %}
 						<li class="nav-item">
 							<a class="nav-link" href={{ url_for("submit") }}>Post</a>
@@ -39,8 +38,8 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ session["username"] }}</a>
 							<ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
+								<li><a class="nav-link" href={{ url_for("view_user",username="me") }}>Profile</a></li>
 								<li><a class="nav-link" href={{ url_for("submit") }}>Post</a></li>
-								<li><a class="nav-link" href={{ url_for("me") }}>Profile</a></li>
 								<li><a class="nav-link" href={{ url_for("user_settings") }}>Settings</a></li>
 							</ul>
 						</li>
@@ -69,6 +68,12 @@
 		</header>
 {% endif %}
 		<div class="main">
+			{% if source in request.args %}
+				{% if request.args["source"] == "pwa" %}
+					pwa time!
+				{% endif %}
+			{% endif %}
+
 			{% block content %}
 			{% endblock %}
 		</div>
@@ -93,11 +98,13 @@
 			</div>
 		</div>
 	</body>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
-	<script data-ad-client="ca-pub-9866851955040612" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </html>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+<script data-ad-client="ca-pub-9866851955040612" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
 <script type=text/javascript>
     $(function() {
     	$('a#markread').bind('click', function() {
