--- a/templates/post/submit.html
+++ b/templates/post/submit.html
@@ -26,7 +26,7 @@
 <div class="tab-content" id="myTabContent">
 	<div class="tab-pane fade show active" id="text" role="tabpanel" aria-labelledby="text-tab">
 		<br>
-		<form action="{{ url_for('submit_text') }}" method="POST" class="form-signin">
+		<form action="{{ url_for('submit',type='text') }}" method="POST" class="form-signin">
 			<div class="form-group">
 				<input style="width:50%" type="title" class="form-control" name="title" placeholder="Title*"><br>
 				<textarea style="width: 75%" class="form-control" id="body" name="body" rows="7" placeholder="Body*" maxlength="1000"></textarea><br>
@@ -36,7 +36,7 @@
 	</div>
 	<div class="tab-pane fade" id="image" role="tabpanel" aria-labelledby="image-tab">
 		<br>
-		<form action="{{ url_for('submit_image') }}" method="POST" class="form-signin" enctype="multipart/form-data">
+		<form action="{{ url_for('submit',type='image') }}" method="POST" class="form-signin" enctype="multipart/form-data">
 			<div class="form-group">
 				<input style="width:50%" type="title" class="form-control" name="title" placeholder="Title*">
 				<br>
