--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -11,7 +11,7 @@
 		{% endif %}
 		<form action="{{ url_for('login') }}" method="POST" class="form-signin">
 			<div class="form-group">
-				<input type="username" class="form-control" name="username" placeholder="Username or e-mail" required><br>
+				<input type="username" class="form-control" name="username" id="username" placeholder="Username or Email" required><br>
 				<input type="password" class="form-control" name="password" placeholder="Password" required><br>
 				<input style="width: 100%" type="submit" class="btn btn-primary" value="Log in" style="text-align: center;">
 			</div>
