--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
 				<div class="main">
 						<h6><a class="no-highlight" href="{{ url_for('view_notif') }}?notif={{ notif['_id'] }}">{{ notif["title"]|markdown }}</a></h6>
 						<div class="main">{{ notif["body"]|e|truncate(50)|markdown }}</div>
-				<p class="timestamp">{{ notif["timestamp"] }}</p>
+				<p class="timestamp">{{ notif["timestamp"]|pretty_time }}</p>
 				</div>
 				<hr>
 				{% endfor %}
@@ -105,13 +105,4 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-<script type=text/javascript>
-    $(function() {
-    	$('a#markread').bind('click', function() {
-            $.getJSON('/mark_all_read',
-                function(data) {}
-			);
-			return false;
-    	});
-    });
-</script>
+<script type="text/javascript" src="/static/js/index.js"></script>
