--- a/templates/post/view.html
+++ b/templates/post/view.html
@@ -5,7 +5,7 @@
 
 <h2>{{ post["title"]|e|markdown }}</h2>
 <p style="font-size: 30px;">
-	Posted by <a href={{ url_for("view_user", username=post["author"]) }}>
+	Posted by <a href='{{ url_for("view_user", username=post["author"]) }}'>
 		<img src="{{ authorpfp }}" onerror="this.onerror=null; this.src='https://i.imgur.com/WxNkK7J.png'" alt="User's pfp" class="rounded" width="30px" height="30px">{{ post["author"] }}
 	</a>
 </p>
@@ -14,20 +14,27 @@
 	{{ post["body"]|e|markdown }}
 </div>
 
-{% if session["username"] == post["author"] %}
-<button class="btn"><a href="{{ url_for('delete_post',post_id=post['_id']) }}"><i class="fa fa-trash"></i></a></button>
-	{% if post["type"] == "text" %}
-	<button class="btn"><a href="{{ url_for('edit_post',post_id=post['_id']) }}"><i class="fa fa-edit"></i></a></button>
-	{% endif %}
-{% endif %}
+{% include 'post/buttons.html' %}
 
 <br><br><p class="timestamp">Posted on {{ post["timestamp"]|pretty_time }}</p>
 
-{%- for subcomment in comment recursive %}
-    <li><a href="{{ item.href|e }}">{{ item.title }}</a>
-    {%- if item.children -%}
-        <ul class="submenu">{{ loop(item.children) }}</ul>
-    {%- endif %}</li>
+{%- for cmt in comments recursive %}
+	<hr>
+	<h6>
+		Posted by 
+		<a href='{{ url_for("view_user", username=post["author"]) }}'>
+			{{ cmt["author"] }}
+		</a>
+	</h6>
+    <div>
+		{{ cmt["body"] }}<br>
+		{% if "username" in session %}
+			<a class="badge badge-primary" href="{{ url_for('subcomment',post_id=post['_id'], parent_cmt_id=cmt['_id']) }}"><i class="fa fa-comment fa-lg"></i></a>
+		{% endif %}
+    	{%- if cmt["children"] -%}
+        	<div style="padding-left:15px">{{ loop(cmt["children"]) }}</div>
+    	{%- endif %}
+	</div>
 {%- endfor %}
 
 {% endblock %}
