--- a/templates/user/view.html
+++ b/templates/user/view.html
@@ -37,12 +37,7 @@
 			{{ post["body"] | e | truncate(200) | markdown }}
 		</div>
 
-		{% if session["username"] == post["author"] %}
-		{% if post["type"] == "text" %}
-			<button class="btn"><a href="{{ url_for('edit_post',post_id=post['_id']) }}"><i class="fa fa-edit"></i></a></button>
-		{% endif %}
-		<button class="btn"><a href="{{ url_for('delete_post',post_id=post['_id']) }}"><i class="fa fa-trash"></i></a></button>
-		{% endif %}
+		{% include 'post/buttons.html' %}
 
 		<hr>
 		{% endfor %}
