--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -11,7 +11,7 @@
 		{% endif %}
 		<form action="" method="POST" class="form-signin">
 			<div class="form-group">
-				<input type="username" pattern="[a-zA-Z0-9_]{4,14}" class="form-control" name="username" placeholder="Username" required title='Minimum 4 characters, Maximum 14, Only use letters, numbers or the symbol "_"'><br>
+				<input type="username" pattern="[a-zA-Z0-9_]{4,14}" class="form-control" name="username" placeholder="Username" required title='Minimum 4 characters, Maximum 14, Only use letters, numbers or the symbol "_"' autofocus><br>
 
 				<input type="email" class="form-control" name="email" placeholder="Email" required><br>
 
