--- a/templates/post/submit.html
+++ b/templates/post/submit.html
@@ -1,25 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-<title>{% if comment %}Comment{% elif edit_post %}Edit{% else %}Submit{% endif %} - ShibaNet</title>
-<h2>{% if comment %}Comment on "{{ ex_post["title"] if ex_post["title"] else ex_post["body"] }}"{% elif edit_post %}Edit "{{ ex_post["title"] }}"{% else %}Submit a post{% endif %}</h2><br>
+<title>{% if edit_post %}Edit{% else %}Submit{% endif %} - ShibaNet</title>
+<h2>{% if edit_post %}Edit "{{ ex_post["title"] }}"{% else %}Submit a post{% endif %}</h2><br>
 
 {% if error %}
 <div class="alert alert-danger" role="alert">{{ error }}</div>
 {% endif %}
 
-{% if comment %}
-<form action="{{ url_for('subcomment', post_id=pst_id, parent_cmt_id=ex_post['_id']) if pst_id else url_for('comment', post_id=ex_post['_id']) }}" method="POST" class="form-signin">
-	<div class="form-group">
-		<textarea style="width: 75%" class="form-control" id="body" name="body" rows="7" placeholder="Body*" maxlength="1000" required></textarea><br>
-		<input type="submit" class="btn btn-primary" value="Comment" style="text-align: center;" onClick="OnSubmit(this);">
-	</div>
-</form>
-{% elif ex_post %}
+{% if ex_post %}
 <form action="{{ url_for('edit_post', post_id=ex_post['_id']) }}" method="POST" class="form-signin">
 	<div class="form-group">
 		<input style="width:50%" type="title" class="form-control" name="title" placeholder="Title*" value="{{ ex_post['title'] }}"><br>
 		<textarea style="width: 75%" class="form-control" id="body" name="body" rows="7" placeholder="Body*" maxlength="1000">{{ ex_post['body'] }}</textarea><br>
-		<input type="submit" class="btn btn-primary" value="Edit" style="text-align: center;" onClick="OnSubmit(this);">
+		<input type="submit" class="btn btn-primary" value="Edit" style="text-align: center;" onClick="OnSubmit(this);" autofocus>
 	</div>
 </form>
 {% else %}
@@ -36,7 +29,7 @@
 		<br>
 		<form action="{{ url_for('submit',type='text') }}" method="POST" class="form-signin">
 			<div class="form-group">
-				<input style="width:50%" type="title" class="form-control" name="title" placeholder="Title*"><br>
+				<input style="width:50%" type="title" class="form-control" name="title" placeholder="Title*" autofocus><br>
 				<textarea style="width: 75%" class="form-control" id="body" name="body" rows="7" placeholder="Body*" maxlength="1000"></textarea><br>
 				<input type="submit" class="btn btn-primary" value="Post!" style="text-align: center;" onClick="OnSubmit(this);">
 			</div>
@@ -46,7 +39,7 @@
 		<br>
 		<form action="{{ url_for('submit',type='image') }}" method="POST" class="form-signin" enctype="multipart/form-data">
 			<div class="form-group">
-				<input style="width:50%" type="title" class="form-control" name="title" placeholder="Title*">
+				<input style="width:50%" type="title" class="form-control" name="title" placeholder="Title*" autofocus>
 				<br>
 				<input type="file" name="image" accept="image/*"/>
 				<br><br>
