--- a/templates/user/view.html
+++ b/templates/user/view.html
@@ -44,7 +44,17 @@
 	</div>
 	<div class="tab-pane fade" id="comments" role="tabpanel" aria-labelledby="comments-tab">
 		<br>
-		Comments appear here
+		{% for cmt in user_comments %}
+		<h4><a href={{ url_for("view_comment", cmt_id=cmt["_id"]) }}>Replying to "{{ cmt|getparenttitle|truncate(20) }}"</a></h4>
+
+		<div class="text_post">
+			{{ cmt["body"]|e|markdown }}
+		</div>
+
+		{% include 'post/cmt_buttons.html' %}
+
+		<hr>
+		{% endfor %}
 	</div>
 	<div class="tab-pane fade" id="about" role="tabpanel" aria-labelledby="about-tab">
 		<br>
