--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,7 +67,7 @@ hr {
 	width: 80%
 }
 .amethyst_theme {
-	background-color: #302666;
+	background-color: #3f1d7c;
 	color: #ffffff;
 }
 .dark_theme {
