--- a/templates/message.html
+++ b/templates/message.html
@@ -5,6 +5,7 @@
 	<div class="center">
 		<h1 style="text-align: center;">{{ title }}</h1>
 		<h2 style="text-align: center;">{{ body }}</h2>
+		<h3 style="text-align: center;"><a class="btn btn-primary" href="{{url_for('index')}}">Go home</a></h3>
 	</div>
 </div>
 {% endblock %}
