--- a/templates/post/buttons.html
+++ b/templates/post/buttons.html
@@ -2,9 +2,9 @@
 
 {# Score #}
 
-<a class="badge badge-primary" href="#"><i class="fa fa-thumbs-up fa-lg"></i></a>
-<span style="font-size: 13px;">100%{{ post["ratio"] }}</span>
-<a class="badge badge-primary" href="#"><i class="fa fa-thumbs-down fa-lg"></i></a>
+<a id="like" class="badge badge-primary" href="javascript:void(0);"><i class="fa fa-thumbs-up fa-lg"></i></a>
+	<span id="ratio" style="font-size: 13px;">100%{{ post["ratio"] }}</span>
+<a id="dislike" class="badge badge-primary" href="javascript:void(0);"><i class="fa fa-thumbs-down fa-lg"></i></a>
 
 {# Comment #}
 
@@ -13,10 +13,12 @@
 {# Moderation #}
 
 {% if session["username"] == post["author"] or session["username"]|is_mod %}
+<span id="modOptions">
 	{% if post["type"] == "text" %}
-		<a class="badge badge-primary" href="{{ url_for('edit_post',post_id=post['_id']) }}"><i class="fa fa-edit fa-lg"></i></a>
+		<a id="edit" class="badge badge-primary" href="{{ url_for('edit_post',post_id=post['_id']) }}"><i class="fa fa-edit fa-lg"></i></a>
 	{% endif %}
-	<a class="badge badge-primary" href="{{ url_for('delete_post',post_id=post['_id']) }}"><i class="fa fa-trash fa-lg"></i></a>
+	<a id="delete" class="badge badge-primary" href="{{ url_for('delete_post',post_id=post['_id']) }}"><i class="fa fa-trash fa-lg"></i></a>
+</span>
 {% endif %}
 
 {% endif %}
